fix avatar and menu

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -81,6 +81,9 @@
         "nombre": "Nombre Completo:",
         "guardar": "Guardar Acompañante"
     },
+    "AVATAR":{
+        "cerrar": "Cerrar"
+    },
     "NEWAUTO":{
         "patente": "Patente",
         "guardar": "Guardar Auto"
