--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,7 +21,7 @@
     "INDEX":{
         "hola": "Hola",
         "xfafoto": "Por favor carga una foto de tu documento para identificarte.",
-        "rvaappch": "Reserva APP Chechkeada",
+        "rvaappch": "Reserva APP Checkeada",
         "qr": "Clickea para ver QR",
         "cod": "Código:",
         "paso0": "Simples pasos para tu App Check In",
