--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,7 +83,8 @@
         "guardar": "Save Companion"
     },
     "AVATAR":{
-        "cerrar": "Close"
+        "cerrar": "Close",
+        "idioma": "Language"
     },
     "NEWAUTO":{
         "patente": "Vehicle number",
