todo ok hasta aca! hice beta android y ios

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,7 +90,7 @@
         "guardar": "Save Companion"
     },
     "AVATAR":{
-        "cerrar": "Close",
+        "cerrar": "Sign Out",
         "idioma": "Language"
     },
     "NEWAUTO":{
