--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -88,7 +88,7 @@
         "guardar": "Guardar Acompañante"
     },
     "AVATAR":{
-        "cerrar": "Cerrar",
+        "cerrar": "Cerrar Sesión",
         "idioma": "Idioma"
     },
     "NEWAUTO":{
