--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -88,7 +88,7 @@
         "guardar": "Salvar Acompanhante"
     },
     "AVATAR":{
-        "cerrar": "Fechar",
+        "cerrar": "Fechar App",
         "idioma": "Língua"
     },
     "NEWAUTO":{
