agregue texto cuando no hay datos cargados

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,8 @@
         "sexo": "Gender",
         "acomp": "Companion/s",
         "auto": "Vehicle",
-        "misdatos": "Modify my details."
+        "misdatos": "Modify my details.",
+        "primerdato": "Please upload your information."
     },
     "MISRESERVAS":{
         "titulo": "My Reservations",
