--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -36,7 +36,8 @@
         "sexo": "Sexo",
         "acomp": "Acompanhante/s",
         "auto": "Veículo",
-        "misdatos": "Modificar Meus Dados"
+        "misdatos": "Modificar Meus Dados",
+        "primerdato": "Prenda seus Dados"
     },
     "MISRESERVAS":{
         "titulo": "Minhas Reservas",
