--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
     },
     "INDEX":{
         "hola": "Hello",
+        "continuemos": "Let's go...",
         "xfafoto": "Please upload a picture of your identification card to identify yourself.",
         "rvaappch": "APP Check in confirmed",
         "qr": "Click to view QR code",
