--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,6 +19,7 @@
     },
     "INDEX":{
         "hola": "Hola",
+        "continuemos": "Continuemos...",
         "xfafoto": "Por favor carga una foto de tu documento para identificarte.",
         "rvaappch": "APP Check In Confirmado",
         "qr": "Clickea para ver QR",
