--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -19,6 +19,7 @@
     },
     "INDEX":{
         "hola": "Olá",
+        "continuemos": "Continuar...",
         "xfafoto": "Faça o upload de uma foto do seu documento para se identificar.",
         "rvaappch": "App Check In confirmado",
         "qr": "Clique para ter QR",
