--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,8 @@
     },
     "UPDATEUSER":{
         "titulo": "Midify details",
-        "guardar": "Save changes"
+        "guardar": "Save changes",
+        "obligatorio": " ** All fields are required."
     },
     "CO":{
         "seleccione": "Click the reservation to make the Check Out.",
