modifique first, solo informativo ahora

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,7 +19,7 @@
         "enviarlink": "Enviar Link"
     },
     "INDEX":{
-        "hola": "Hola",
+        "hola": "Hola!",
         "continuemos": "Continuemos...",
         "xfafoto": "Por favor carga una foto de tu documento para identificarte, desde 'Mis Datos'.",
         "rvaappch": "APP Check In Confirmado",
